--- a/node/latest/Dockerfile
+++ b/node/latest/Dockerfile
@@ -6,7 +6,7 @@ ENV NODE_VERSION 0.11.14
 RUN \
     yum update -y \
     && yum -y clean all \
-    && yum install -y wget gcc gcc-c++ which make git \
+    && yum install -y wget gcc-c++ which make git \
     && yum -y clean all \
     && mkdir -p ~/node \
     && cd ~/node \
